{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "040f2b47-40a4-4138-9778-d59196476fc8",
            "actions": [
                {
                    "name": "Digit1",
                    "type": "Button",
                    "id": "888beb70-0448-46e2-af81-bf4316b2e439",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit2",
                    "type": "Button",
                    "id": "0bdec177-1b8d-4428-b402-cf08db4aa945",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit3",
                    "type": "Button",
                    "id": "facec24d-1b68-48a3-a2ba-40e462bbd9dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit4",
                    "type": "Button",
                    "id": "dba05d7d-7d48-4d6b-92e4-e6a306bc323a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit5",
                    "type": "Button",
                    "id": "90cda942-177b-4400-bf6b-d53f46b92d69",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit6",
                    "type": "Button",
                    "id": "945d1731-db38-438e-b229-88b14cba6e2a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit7",
                    "type": "Button",
                    "id": "0b23bc27-b178-42ac-b3ff-bbacf935c366",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit8",
                    "type": "Button",
                    "id": "a1103fee-f9c7-4a6c-89c6-04216a9f8a3e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit9",
                    "type": "Button",
                    "id": "48fbb36b-2884-4f96-b7ee-916d3448e9a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Digit0",
                    "type": "Button",
                    "id": "4e34ae3b-4402-41bb-9d48-34218402f253",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "7f8b1d9f-8836-4af1-85a9-569664b18d7f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backspace",
                    "type": "Button",
                    "id": "df64476f-4213-4e47-8e5b-1b2e36c92f6f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab8599ad-ee57-4133-b40d-694adb3f0c53",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "222667af-1212-43da-9a19-b65c2359e47d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "473a0e23-bac0-423e-bc8c-af03c0ee2c3a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77dbf506-0991-4026-824d-8a82189d79a4",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddb28bf6-f9a0-45f9-ad59-90543f27dac2",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c5d14b5-9cc3-4982-a4f5-c81dc31724bf",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93f49bd4-c210-4767-9d4c-d9596665453b",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e03467ef-cedf-41b0-a4b1-a2ef739904f7",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe38dd75-bf8c-4fec-ba30-f617e87841e7",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cddb21b9-c5c5-4532-8eda-2c7acc717662",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Digit0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db2bed9c-f43f-40a1-8d19-79e0b96a84cc",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a0b42ed-88ef-47fc-9ddb-040f8e7bd44f",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backspace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}